<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/credential_colour"
    tools:context=".CredentialActivity"
    tools:layout_editor_absoluteY="25dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >


    <EditText
        android:id="@+id/editText_psw"

        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="27dp"

        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_name"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText_psw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDal"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:alpha="0.80"
        android:background="#707372"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_regs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_psw" />

    <Button
        android:id="@+id/button_regs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:alpha="0.80"
        android:background="#707372"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_fid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_fid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/forgot_password"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_regs" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_psw" />

    <ImageView
        android:id="@+id/imageViewDal"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />


</android.support.constraint.ConstraintLayout>